# oncopacket

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: documentation.yaml  python_ci.yml
cda/cda_biosample_factory/: index.html
cda/cda_disease_factory/: index.html
cda/cda_factory/: index.html
cda/cda_individual_factory/: index.html
cda/cda_mutation_factory/: index.html
cda/cda_table_importer/: index.html
docs/: index.md  installation.md  workplan.md
docs/cda/: cda_biosample_factory.md  cda_disease_factory.md  cda_factory.md  cda_individual_factory.md  cda_mutation_factory.md  cda_table_importer.md
docs/explanations/: cda_disease.md  new_cda_api.md
docs/model/: index.md  op_individual.md
explanations/cda_disease/: index.html
explanations/cda_mutation/: index.html
explanations/new_cda_api/: index.html
installation/: index.html
model/: index.html
model/op_individual/: index.html
notebooks/: sites.csv  test.ipynb
notebooks/cohort_analysis/: plot_cohort.ipynb  survival_analysis.ipynb
scripts/: run_TCGA_LUAD.py  run_bone.py  run_brain.py  run_breast.py  run_cervix.py  run_colon.py  run_heart.py  run_kidney.py  run_liver.py  run_lung.py  run_pancreas.py  run_skin.py  run_stomach.py  run_thyroid.py
search/: search_index.json
src/oncoexporter/cda/: _gdc.py
src/oncopacket/: __init__.py
src/oncopacket/cda/: _gdc.py  cda_disease_factory.py  cda_downloader.py  cda_factory.py  cda_table_importer.py
src/oncopacket/ncit_mapping_files/: README.md  (+5 more)
tests/: test_cda_disease_factory.py  test_cda_factory.py  test_cda_individual_factory.py  test_gdc_mutation.py  test_iso_age_mapper.py  test_op_biosample.py  test_op_mutation.py
tests/mapper/: test_op_diagnosis_mapper.py
workplan/: index.html
(+3 files in other folders)
