# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "oncopacket"
dynamic = ["version"]
requires-python = ">=3.8"
description = "Generate and work with GA4GH phenopackets for NCI"
readme = "README.md"
authors = [
    {name = "Peter Robinson", email="peter.robinson@jax.org"},
    {name = "Justin Reese", email="justinreese@lbl.gov"},
    {name = "Michael Sierk", email="michael.sierk@nih.gov"},
    {name = "Daniel Danis", email="daniel.danis@bih-charite.de"},
     ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Global Alliance for Genomics and Health",
    "GA4GH Phenopacket Schema",
    "Human Phenotype Ontology",
    "GA4GH",
    "NCI",
    "HPO"]
dependencies = [
    "hpo-toolkit>=0.3.0,<0.4.0",
    "phenopackets>=2.0.2",
    "requests>=2.25.0,<3.0",
    "cdapython@git+https://github.com/CancerDataAggregator/cdapython@0324510",
    "ipython<=8.22.2",  # higher versions result in an import error
    "tqdm>=4.60",
]
[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0"]


[project.urls]
homepage = "https://github.com/monarch-initiative/oncopacket"
repository = "https://github.com/monarch-initiative/oncopacket.git"
documentation = "https://github.com/monarch-initiative/oncopacket"
bugtracker = "https://github.com/monarch-initiative/oncopacket/issues"

[tool.setuptools.dynamic]
version = { attr = "oncopacket.__version__" }

[tool.setuptools.package-data]
"oncopacket.ncit_mapping_files" = ["*.csv"]
